fixed info spacing

--- a/_sass/2-layouts/information.sass
+++ b/_sass/2-layouts/information.sass
@@ -1,5 +1,5 @@
 .informationContentContainer
-  padding: 98px 100px 100px 100px
+  padding: 98px 100px 50px 100px
   box-sizing: border-box
   width: 100%
   min-height: 100vh
